2008-10-12  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* MonoDevelop.VersionControl.Views/LogView.cs: Improve the control of
	what is selected: no sense to revert to *current* rev.

2008-10-12  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* MonoDevelop.VersionControl.Views/LogView.cs: Coding guidelines.

2008-10-07  Aaron Bockover  <abockover@novell.com>

	* MonoDevelop.VersionControl/ChangeLogWriter.cs: Remove the space
	alignment from the tab indent on the ChangeLog message, preserve it
	for the commit message

2008-10-07  Aaron Bockover  <abockover@novell.com>

	* MonoDevelop.VersionControl/ChangeSet.cs: Updated to use
	  ChangeLogMessageStyle instead of the WriteHeader bool

	* MonoDevelop.VersionControl/ChangeLogWriter.cs: Omit files with
	  empty/unset messages from the ChangeLog by default; when the GUI
	  builder is working again I'll add a preference for this; if the
	  ChangeLog is empty, also insert some extra whitespace for easily
	  entering commit messages without applying to files; opted for
	  ChangeLogMessageStyle enum instead of a bool WriteHeader

2008-10-07  Aaron Bockover  <abockover@novell.com>

	* MonoDevelop.VersionControl/ChangeSet.cs: Use ChangeLogWriter to
	  generate messages instead of the old formatting

	* MonoDevelop.VersionControl/ChangeLogWriter.cs: Writes a standard
	  ChangeLog file with proper grouping, alignment, word wrapping, and
	  spacing; it can produce a commit message without indentation or
	  header as well

2008-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.VersionControl.Dialogs.SelectRepositoryDialog.cs,
	  gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.VersionControl.Dialogs.EditRepositoryDialog.cs,
	  gtk-gui/MonoDevelop.VersionControl.UrlBasedRepositoryEditor.cs,
	  gtk-gui/MonoDevelop.VersionControl.Dialogs.CommitDialog.cs,
	  gtk-gui/gui.stetic: Updated.
	* MonoDevelop.VersionControl/PublishCommand.cs: When publishing a